web/book/tests/snapshots/snapshot__language-features__strings-0.snap
---
source: web/book/tests/snapshot.rs
expression: "from my_table\nselect x = \"hello world\"\n"
---
SELECT
  'hello world' AS x
FROM
  my_table

