web/book/tests/snapshots/snapshot__language-features__strings-5.snap
---
source: web/book/tests/snapshot.rs
expression: "from my_table\nselect x = \"\\t\\tline ends here\\n \\\\ \"\n"
---
SELECT
  '		line ends here
 \ ' AS x
FROM
  my_table

