web/book/tests/snapshots/snapshot__language-features__target-0.snap
---
source: web/book/tests/snapshot.rs
expression: "prql target:sql.postgres\n\nfrom employees\nsort age\ntake 10\n"
---
SELECT
  *
FROM
  employees
ORDER BY
  age
LIMIT
  10

