web/book/tests/snapshots/snapshot__language-features__target-2.snap
---
source: web/book/tests/snapshot.rs
expression: "prql version:\"0.8.1\"\n\nfrom employees\n"
---
SELECT
  *
FROM
  employees

